# tauri-commit-jokes

./: .env.example  BRD.md  CHANGELOG.md  PRD.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/architecture/: ERD.md
docs/plans/: 2026-04-06-gitroast-mvp-plan.md  2026-04-07-closed-source-ux-refresh.md
docs/scaffold/: app-blueprint.md
scripts/cli/: gitroast.cmd  gitroast.sh
src/: App.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/git/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/secure_store/: mod.rs
src/app/: App.tsx  AppShell.test.tsx
src/components/: Panel.tsx  StatusPill.tsx
src/features/downloads/: ReleasePicker.tsx
src/features/generator/: GeneratorPanel.test.tsx  GeneratorPanel.tsx
src/features/onboarding/: ApiKeyForm.tsx  ServicePanel.test.tsx
src/features/repo-status/: RepoSummary.test.tsx  RepoSummary.tsx
src/lib/: clipboard.ts  tauri.ts
src/types/: contracts.ts
